# DDCS

./: Detail.py  FileWorker.py  Frames.py  main.py  pyproject.toml
